--- a/README
+++ b/README
@@ -1,3 +1,16 @@
+THIS IS A FORK !
+
+ ┌────────────────────────────┐
+ │ About this fork            │
+ └────────────────────────────┘
+
+This fork adds a mpd current song view.
+
+added dependencies:
+ • libmpdclient
+
+git@github.com:Gravemind/i3status.git
+
  ┌────────────────────────────┐
  │ Description                │
  └────────────────────────────┘
@@ -20,6 +33,7 @@ i3status has the following dependencies:
  • libiw-dev
  • libcap2-bin (for getting network status without root permissions)
  • asciidoc (only for the documentation)
+ • libmpdclient
 
 On debian-based systems, the following line will install all requirements:
 apt-get install libconfuse-dev libyajl-dev libasound2-dev libiw-dev asciidoc libcap2-bin
