--- a/man/i3status.man
+++ b/man/i3status.man
@@ -456,6 +456,7 @@ mpd {
     format_down = " - "
     host = "127.0.0.1"
     port = 6600
+    # password = "myMPDPassword"
 }
 -------------------------------------------------------------
 
